# unlp-2026-shared-task

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml  requirements.txt  submission-pipeline.ipynb
data/: dev_questions.csv
modules/: generate_questions.py  model_finetuning.py  pdf_loader.py  tantivy_index.py
notebooks/: 01_data_loading.ipynb  02_lapa_inference_llama_cpp.ipynb  03_search_pipeline.ipynb  06_lapa_inference.ipynb  07_error_analysis.ipynb
